--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Uaijug.GitHub.io</h1>
+        <h1>Uaijug - Grupo de usuários do triângulo mineiro.</h1>
         <p></p>
 
 
-        <p class="view"><a href="https://github.com/uaijug">View My GitHub Profile</a></p>
+        <p class="view"><a href="https://github.com/uaijug">Nosso GitHub, acesse!</a></p>
 
       </header>
       <section>
