--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>O que é o UaiJUG?.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>O UaiJUG é um grupo sem fins lucrativos que foi fundado em 2007, com o intuito de fomentar o Java na cidade de Uberlândia. O JUG (Java Users Group) começou realizando pequenas reuniões para discussões sobre a linguagem, participando em alguns eventos e realizando palestras. O grupo começou a crescer, ganhando vários apoiadores e seguidores, o que nos possibilitou a criação dos nossos próprios eventos, além de aumentar o número de reuniões e encontros. 
+
+A ideia do grupo é sempre contribuir e ajudar os outros programadores e entusiastas a crescer juntamente com a comunidade. Usamos para isso palestras, eventos, projetos open-source e discussões sobre tecnologia.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
