--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 A ideia do grupo é sempre contribuir e ajudar os outros programadores e entusiastas a crescer juntamente com a comunidade. Usamos para isso palestras, eventos, projetos open-source e discussões sobre tecnologia.</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Lista de Discussão.</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>Entre na nossa lista, conheça outros programadores, sugira tópicos legais para ser produtivos, ache parceiros para projetos e contribua com dúvidas e com ajuda em dúvidas de outros programadores. <br /> Acesse e se cadastre: https://groups.google.com/forum/?hl=en#!forum/uaijug ou pelo email: UaiJug <uaijug@googlegroups.com></p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
