--- a/index.html
+++ b/index.html
@@ -36,12 +36,16 @@ A ideia do grupo é sempre contribuir e ajudar os outros programadores e entusia
 <p>Entre na nossa lista, conheça outros programadores, sugira tópicos legais para ser produtivos, ache parceiros para projetos e contribua com dúvidas e com ajuda em dúvidas de outros programadores. <br /> <br /> Acesse e se cadastre: <br /> https://groups.google.com/forum/?hl=en#!forum/uaijug  <br /> ou: <br /> uaijug@googlegroups.com</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contribua com nossa lista de projetos:</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Acesse nosso github, veja nossos projetos conheça-os. Faça um fork nos projetos, entre e nos ajude com melhorias, sugestões e contribuições para podemos ajudar a comunidade e nossa sociedade com boas ideias.
+<br /><br />
+Acesse e contribua:
+<br />
+https://github.com/uaijug</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Acesse nossas redes sociais</h3>
 
 <p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
 
