--- a/index.html
+++ b/index.html
@@ -43,16 +43,21 @@ A ideia do grupo é sempre contribuir e ajudar os outros programadores e entusia
 Acesse e contribua:
 <br />
 https://github.com/uaijug</p>
-
+<br /><br />
+Além disso, acompanhe nossos eventos:
+<br />
+http://uaijug.github.io/planejamento-eventos-2016/
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Acesse nossas redes sociais</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p><p>Facebook: <a href="https://www.facebook.com/uaijug.uaijug/" target="_blank" class="user-mention">Ir para a pagina</a><br /></p>
+<p>Twitter: <a href="https://twitter.com/uaijug" target="_blank" class="user-mention">Ir para a pagina</a><br /></p>
+</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p> <a href="mailto:uaijug@gmail.com">entre em contato</a></p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
