--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@ A ideia do grupo é sempre contribuir e ajudar os outros programadores e entusia
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Lista de Discussão.</h3>
 
-<p>Entre na nossa lista, conheça outros programadores, sugira tópicos legais para ser produtivos, ache parceiros para projetos e contribua com dúvidas e com ajuda em dúvidas de outros programadores. <br /> <br /> Acesse e se cadastre: <br /> https://groups.google.com/forum/?hl=en#!forum/uaijug  <br /> ou: <br /> uaijug@googlegroups.com</p>
+<p>Entre na nossa lista, conheça outros programadores, sugira tópicos legais para ser produtivos, ache parceiros para projetos e contribua com dúvidas e com ajuda em dúvidas de outros programadores. <br /> <br /> Acesse e se cadastre: <br /> https://groups.google.com/forum/?hl=en#!forum/uaijug  <br /> ou: <br /> uaijug@googlegroups.comAlém disso, acompanhe nossos eventos:
+<br />
+http://uaijug.github.io/planejamento-eventos-2016/</p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contribua com nossa lista de projetos:</h3>
@@ -44,9 +46,7 @@ Acesse e contribua:
 <br />
 https://github.com/uaijug</p>
 <br /><br />
-Além disso, acompanhe nossos eventos:
-<br />
-http://uaijug.github.io/planejamento-eventos-2016/
+
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Acesse nossas redes sociais</h3>
 
