--- a/index.html
+++ b/index.html
@@ -31,29 +31,25 @@
 A ideia do grupo é sempre contribuir e ajudar os outros programadores e entusiastas a crescer juntamente com a comunidade. Usamos para isso palestras, eventos, projetos open-source e discussões sobre tecnologia.</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>UaiJUG - AFD (Academia do Ferreiro Digital).</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Reuniões:</h3>
 
-<p>UaiJUG - AFD (Academia do Ferreiro Digital), é um projeto que visa ensinar conceitos de programação nos mesmos moldes que ferreiros antigos. Onde o aprendiz seguia os passos do ferreiro mestre e o via trabalhar até aprender as técnicas e experiências adquiridas ao longo do tempo. A intenção do AFD é que seja um curso focado no desenvolvimento de aprendizagem de teorias e práticas, enquanto é desenvolvido um projeto Open-Source. O AFD é basicamente troca de experiências, com mão na massa. No curso falaremos de linguagens de programação, viabilidade de projetos, como usar conceitos de Cloud, Agilidade, técnicas de programação, dentre outras coisas. O projeto visa aproveitar o Desenvolvedor que tem mais experiência em programação e ao lado dos que estão aprendendo, evoluir na jornada do desenvolvimento do projeto. O objetivo do projeto é de servir de laboratório para que possamos testar novas técnicas e adquirir novas habilidades. <br /> <br /> Acesse e se cadastre: <br /> https://groups.google.com/forum/?hl=en#!forum/uaijug  <br /><br />
-<br />
-http://uaijug.github.io/planejamento-eventos-2016/</p>
+<p>Geralmente de 2 em 2 meses. E evento de novidades sempre no final do ano. <br /><br />
         
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>UaiJUG - AFD (Academia do Ferreiro Digital)</h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projetos:</h3>
+
+<h5>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>UaiJUG - AFD (Academia do Ferreiro Digital)</h5>
 
 <p>UaiJUG - AFD (Academia do Ferreiro Digital), é um projeto que visa ensinar conceitos de programação nos mesmos moldes que ferreiros antigos. Onde o aprendiz seguia os passos do ferreiro mestre e o via trabalhar até aprender as técnicas e experiências adquiridas ao longo do tempo. A intenção do AFD é que seja um curso focado no desenvolvimento de aprendizagem de teorias e práticas, enquanto é desenvolvido um projeto Open-Source. O AFD é basicamente troca de experiências, com mão na massa. No curso falaremos de linguagens de programação, viabilidade de projetos, como usar conceitos de Cloud, Agilidade, técnicas de programação, dentre outras coisas. O projeto visa aproveitar o Desenvolvedor que tem mais experiência em programação e ao lado dos que estão aprendendo, evoluir na jornada do desenvolvimento do projeto. O objetivo do projeto é de servir de laboratório para que possamos testar novas técnicas e adquirir novas habilidades.
 <br /><br />
-Acesse e contribua:
-<br />
-https://github.com/uaijug</p>
-<br />
+Acesse e contribua: https://github.com/uaijug</p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contribua com nossa lista de projetos:</h3>
 
 <p>Acesse nosso github, veja nossos projetos conheça-os. Faça um fork nos projetos, entre e nos ajude com melhorias, sugestões e contribuições para podemos ajudar a comunidade e nossa sociedade com boas ideias.
 <br /><br />
-ss
-<br />
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Acesse nossas redes sociais</h3>
