--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Uaijug - Grupo de usuários do triângulo mineiro.</h1>
+        <h1>Uaijug - Grupo de usuários do Triângulo Mineiro.</h1>
         <p></p>
 
 
