--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@ Acesse e contribua: https://github.com/uaijug</p>
 </p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contato</h3>
 
-<p> <a href="mailto:uaijug@gmail.com">entre em contato</a></p>
+<p> <a href="mailto:uaijug@gmail.com">Entre em contato</a></p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
