--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ A ideia do grupo é sempre contribuir e ajudar os outros programadores e entusia
 Acesse e contribua: https://github.com/uaijug</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contribua com nossa lista de projetos:</h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contribua com nossos outros projetos:</h3>
 
 <p>Acesse nosso github, veja nossos projetos conheça-os. Faça um fork nos projetos, entre e nos ajude com melhorias, sugestões e contribuições para podemos ajudar a comunidade e nossa sociedade com boas ideias.
 <br /><br />
